[gd_scene load_steps=21 format=1]

[ext_resource path="res://scenes/game.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo.png" type="Texture" id=2]
[ext_resource path="res://scripts/felpudo.gd" type="Script" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=6]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=7]
[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=8]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=9]
[ext_resource path="res://sound/somVoa.ogg" type="AudioStream" id=10]
[ext_resource path="res://scenes/cano.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/gerador.gd" type="Script" id=12]
[ext_resource path="res://assets/font160.fnt" type="BitmapFont" id=13]
[ext_resource path="res://sound/somScore.ogg" type="AudioStream" id=14]
[ext_resource path="res://sound/somHit.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]

resource/name = "BackAnim"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackAnim/Sprite1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1026, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackAnim/Sprite2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1026, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 99.4119

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 999.604, -0.683685 )

[sub_resource type="SegmentShape2D" id=5]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 1003.28, -1.34021 )

[node name="GameNode" type="Node2D"]

script/script = ExtResource( 1 )

[node name="BackAnim" type="AnimationPlayer" parent="."]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/BackAnim = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "BackAnim"

[node name="Sprite1" type="Sprite" parent="BackAnim"]

transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="BackAnim"]

transform/pos = Vector2( 1026, 0 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="Felpudo" type="RigidBody2D" parent="."]

transform/pos = Vector2( 195.398, 797.431 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 19.5482, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 18.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 3 )

[node name="FelpudoAnim" type="AnimatedSprite" parent="Felpudo"]

transform/scale = Vector2( 1.4, 1.4 )
frames = SubResource( 3 )
animation = "default"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Felpudo"]

transform/pos = Vector2( 19.5482, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="SomVoa" type="StreamPlayer" parent="Felpudo"]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Limites" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0.309494, 1699.89 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Limites"]

transform/pos = Vector2( 0.309494, 1699.89 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 1

[node name="Canos" type="Node2D" parent="."]

z/z = 2

[node name="Cano" parent="Canos" instance=ExtResource( 11 )]

transform/pos = Vector2( 1173.56, 838.243 )
z/z = 2
z/relative = false

[node name="Gerador" type="Position2D" parent="Canos"]

transform/pos = Vector2( 1165.63, 836.785 )
script/script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="Canos/Gerador"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="TimeToReplay" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Node2D" type="Node2D" parent="."]

editor/display_folded = true
z/z = 3

[node name="Control" type="Control" parent="Node2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label" type="Label" parent="Node2D/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 70.0
margin/right = 996.0
margin/bottom = 243.0
custom_fonts/font = ExtResource( 13 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SomScore" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="SomHit" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="Canos/Gerador/Timer" to="Canos/Gerador" method="_on_Timer_timeout"]

[connection signal="timeout" from="TimeToReplay" to="." method="_on_TimeToReplay_timeout"]


